# Secure-Doc-Intelligence

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  app.py  config.py  create_test_bank_statement.py  create_test_compliance_invoice.py  create_test_gstr2b_recon_pdfs.py  create_test_gstr_pdfs.py  create_test_notices.py  docker-compose.yml  entrypoint.sh  expected_answers.md  ingestion.py  main.py  micro_saas.db  multi_agent.py  promote_admin.py  pyproject.toml  test_bank_statement.py  test_compliance_accuracy.py  test_gst_recon.py  test_gstr9_recon.py  test_invoice_dirty.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_pipeline_json.py  test_pipeline_missing.py
Database/: database.py  models.py
alembic/: env.py
api/: dependencies.py
blueprints/: balance_sheet_blueprint.json  gst_blueprint.json  income_tax_blueprint.json  tax_audit_3cd_blueprint.json  tax_audit_44ab_blueprint.json  tds_blueprint.json
db/: config.py  database.py
global_vector_db/: chroma.sqlite3
memory/: MEMORY.md  api_reference.md  architecture.md  blueprints.md  code_map.md  db_models.md  known_issues.md
repositories/: session_repository.py
schemas/: advance_tax_schema.py  audit_log_schema.py  blueprint_schema.py  calendar_schema.py  client_schema.py  depreciation_schema.py  export_schema.py  feedback_schema.py  gstr9_schema.py  legal.py  notice_schema.py  remediation_schema.py  user.py
scripts/: evaluate_bank_analyzer.py  migrate_sqlite_to_postgres.py
services/: advance_tax_service.py  approval_service.py  audit_log_service.py  auth_service.py  bank_statement_service.py  blueprint_service.py  calendar_service.py  capital_gains_rules.py  capital_gains_service.py  check_agent.py  cleanup_service.py  concurrency.py  credits_service.py  email_service.py  (+20 more)
(+87 files in other folders)
