[project]
name = "legal-ai-expert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "fpdf2>=2.8.6",
    "gradio>=6.6.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
]
